feat: add TFR menus and six-slot research layout